# transcribebench

./: .gitignore  ARCHITECTURE.md  ATTRIBUTIONS.md  CHANGELOG.md  LICENSE.md  Makefile  README.md  RELEASE_NOTES.md  TODO.md  TranscribeBench  config.yaml  config_10.yaml  config_10_whispercpp_largev1.yaml  config_test.yaml  pyproject.toml
artifacts/reports/archive/reports_10/: report.md
artifacts/reports/archive/reports_200_nl_2026-03-19/: report.md  results.csv
artifacts/reports/archive/reports_test/: report.md
artifacts/reports/latest/: report.md  results.csv
artifacts/results/archive/runs_200_nl_2026-03-19/: results.json
config/: benchmark_10.yaml  benchmark_10_whispercpp_largev1.yaml  benchmark_200_2026-03-19.yaml  default.yaml  test.yaml
docs/: Architecture.md  Benchmark.md  Home.md  QuickStart.md  ubiquitous-language.md
reports_10/: results.csv
reports_10_largev1/: results.csv
reports_test/: results.csv
runs_10/: results.json
runs_10_largev1/: results.json
runs_test/: results.json
src/transcribebench/: __init__.py  cli.py  config.py  report.py  runner.py
src/transcribebench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/transcribebench/dataset/: __init__.py  common_voice.py
src/transcribebench/engines/: __init__.py  apple_speech.py  base.py  faster_whisper.py  mlx_whisper.py  parakeet_ctc.py  parakeet_mlx.py  whisper_cpp.py
tests/: test_apple_speech.py  test_config.py  test_parakeet_mlx.py  test_report.py
tmp_hf/models--Xenova--whisper-tiny/refs/: main
tools/: apple_speech_cli.swift
(+1 files in other folders)
